--- a/redis.yaml
+++ b/redis.yaml
@@ -75,3 +75,17 @@ spec:
       - name: redis-data
         persistentVolumeClaim:
           claimName: pvc-redis
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-cart
+spec:
+  type: ClusterIP
+  selector:
+    app: redis-cart
+  ports:
+  - name: tcp-redis
+    port: 6379
+    targetPort: 6379
+
